Fixed triangle position + text align on girls

--- a/styles/main.css
+++ b/styles/main.css
@@ -239,7 +239,6 @@ body {
   font-size: 16px;
   justify-content: space-around;
 }
-/*He cambiado el justify-content a "space-around"*/
 
 .icon {
   color: #099d8d;
@@ -321,7 +320,7 @@ footer {
       border-right: 31px solid transparent;
       border-top: 31px solid white;
       margin: -1px auto;
-      transform: translate(200px, 0);
+      transform: translate(50vw, 0);
   }
 
   .about-us-container {
@@ -388,7 +387,7 @@ footer {
   .girl-container {
     display: flex;
     flex-direction: row;
-    align-items: flex-start; /*esto lo he puesto para que el texto y la imagen estén alineados arriba. te lo digo porque es una de las cosas me ha costado pillar jeje*/
+    align-items: flex-start;
     margin: 0 25px 60px 25px;
   }
 
@@ -409,7 +408,7 @@ footer {
   .girl-text-5 {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /*esto sería para que tanto el nombre de la chica como la descripción se alineen en el eje horizontal al inicio*/
+    align-items: flex-start;
     padding: 20px;
     margin-top: 20px;
   }
@@ -508,7 +507,7 @@ footer {
       border-right: 31px solid transparent;
       border-top: 31px solid white;
       margin: -1px auto;
-      transform: translate(200px, 0);
+      transform: translate(50vw, 0);
   }
 
   .about-us-container {
@@ -567,7 +566,7 @@ footer {
   .girl-container {
     display: flex;
     flex-direction: row;
-    align-items: flex-start; /*esto lo he puesto para que el texto y la imagen estén alineados arriba. te lo digo porque es una de las cosas me ha costado pillar jeje*/
+    align-items: flex-start;
     margin: 0 25px 60px 25px;
   }
 
